# WebServerCPP

./: CMakeLists.txt  README.md  main.cpp
network/: WSCPPlibcNetworking.h
network/server/: SimpleServer.cpp  SimpleServer.h  TestServer.cpp  TestServer.h  WSCPPlibcServer.h
network/sockets/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  ListeningSocket.cpp  ListeningSocket.h  SimpleSocket.cpp  SimpleSocket.h  WSCPPlibcSockets.h
